--- a/client/pages/testing.html
+++ b/client/pages/testing.html
@@ -1,155 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<html>
 
-<nav class="navbar navbar-expand-lg px-5 bg-dark">
-    <div class="container-fluid">
-        <a class="Navbar-logo navbar-brand" href="#">
-            <img class="rounded-circle" src="../Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
-        </a>
-        <a class="navbar-brand text-danger" href="#">Semmandalluwa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="./pages-style.css" rel="stylesheet">
+</head>
+
+<body>
+    <!--Navbar section-->
+    <nav class="navbar navbar-expand-lg px-5 bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img class="rounded-circle" src="../Assets/Navbar Logo.png" alt="logo" height="40px" width="40px">
+            </a>
+            <a class="navbar-brand text-danger" href="#">Semmandalluwa</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active text-success" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-success" href="./pages/store.html">Store</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-primary" href="../LogIn page/login.html">Login</a>
-                </li> 
-            </ul>
-        </div>
-    </div>
-    </div>
-</nav>
-
-<!-- Section: Design Block -->
-<section class="background-radial-gradient overflow-hidden">
-    <style>
-      .background-radial-gradient {
-        background-color: hsl(218, 41%, 15%);
-        background-image: radial-gradient(650px circle at 0% 0%,
-            hsl(218, 41%, 35%) 15%,
-            hsl(218, 41%, 30%) 35%,
-            hsl(218, 41%, 20%) 75%,
-            hsl(218, 41%, 19%) 80%,
-            transparent 100%),
-          radial-gradient(1250px circle at 100% 100%,
-            hsl(218, 41%, 45%) 15%,
-            hsl(218, 41%, 30%) 35%,
-            hsl(218, 41%, 20%) 75%,
-            hsl(218, 41%, 19%) 80%,
-            transparent 100%);
-      }
-  
-      #radius-shape-1 {
-        height: 220px;
-        width: 220px;
-        top: -60px;
-        left: -130px;
-        background: radial-gradient(#44006b, #ad1fff);
-        overflow: hidden;
-      }
-  
-      #radius-shape-2 {
-        border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
-        bottom: -60px;
-        right: -110px;
-        width: 300px;
-        height: 300px;
-        background: radial-gradient(#44006b, #ad1fff);
-        overflow: hidden;
-      }
-  
-      .bg-glass {
-        background-color: hsla(0, 0%, 100%, 0.9) !important;
-        backdrop-filter: saturate(200%) blur(25px);
-      }
-    </style>
-  
-    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
-      <div class="row gx-lg-5 align-items-center mb-5">
-        <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-          <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-            The best value <br />
-            <span style="color: hsl(218, 81%, 75%)">for your offer</span>
-          </h1>
-          <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-            We have seasonal offers available for seasonal fruits and weekly offers on Sundays and Mondays.
-          </p>
-          <a class="btn btn-primary" href="../pages/store.html" role="button">Store</a>
-        </div>
-  
-        <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
-          <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
-          <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
-  
-          <div class="card bg-glass">
-            <div class="card-body px-4 py-5 px-md-5">
-              <form>
-                <!-- 2 column grid layout with text inputs for the first and last names -->
-                <div class="row">
-                    <div class="col-md-6 mb-4">
-                      <div class="form-outline">
-                        <label class="form-label" for="form3Example1">First name</label>
-                        <input type="text" id="form3Example2" class="form-control" />
-                      </div>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                      <div class="form-outline">
-                        <label class="form-label" for="form3Example2">Last name</label>
-                        <input type="text" id="form3Example2" class="form-control" />
-                      </div>
-                    </div>
-                  </div>
-  
-                  <!-- Email input -->
-                  <div class="form-outline mb-4">
-                    <label class="form-label" for="form3Example3">Email address</label>
-                    <input type="text" id="form3Example2" class="form-control" />
-                  </div>
-  
-                  <!-- Password input -->
-                  <div class="form-outline mb-4">
-                    <label class="form-label" for="form3Example4">Password</label>
-                    <input type="text" id="form3Example2" class="form-control" />
-                  </div>
-  
-                <!-- Checkbox -->
-                <div class="form-check d-flex justify-content-center mb-4">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                  <label class="form-check-label" for="form2Example33">
-                    Subscribe to our newsletter
-                  </label>
-                </div>
-  
-                <!-- Submit button -->
-                <button type="submit" class="btn btn-primary btn-block mb-4">
-                  Sign up
-                </button>
-              </form>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-success" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-primary" href="../login-page/index.html">Login</a>
+                    </li>
+                </ul>
             </div>
-          </div>
         </div>
-      </div>
+    </nav>
+
+    <!--Item Cards section-->
+    <div class="container product-card-list mt-4">
+        <!-- Card 1: Bananas -->
+        <div class="card">
+            <img src="../Assets/Banana.jpg" class="card-img-top" alt="Bananas">
+            <div class="card-body">
+                <h5 class="card-title">Bananas</h5>
+                <p class="card-text">Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 2: Mangoes -->
+        <div class="card">
+            <img src="../Assets/Mango.jpg" class="card-img-top" alt="Mangoes">
+            <div class="card-body">
+                <h5 class="card-title">Mangoes</h5>
+                <p class="card-text">Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica. Mangoes were first grown in India over 5,000 years ago. Mangoes grow on trees and in tropical regions.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 3: Wood Apple -->
+        <div class="card">
+            <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="Wood Apple">
+            <div class="card-body">
+                <h5 class="card-title">Wood Apple</h5>
+                <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body. It is sometimes also called monkey fruit.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 4: Cashew -->
+        <div class="card">
+            <img src="../Assets/Cashew.jpg" class="card-img-top" alt="Cashew">
+            <div class="card-body">
+                <h5 class="card-title">Cashew</h5>
+                <p class="card-text">The cashew you eat is actually the seed. Initially, it is surrounded by a double shell with components like urushiol and a potential skin irritant.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 5: Coconut -->
+        <div class="card">
+            <img src="../Assets/Coconut.jpg" class="card-img-top" alt="Coconut">
+            <div class="card-body">
+                <h5 class="card-title">Coconut</h5>
+                <p class="card-text">The coconut tree is botanically named Cocus Nucifera. Coconut water contains 94% water (on average) with approximately 46 calories a cup.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 6: Guava -->
+        <div class="card">
+            <img src="../Assets/Guava.jpg" class="card-img-top" alt="Guava">
+            <div class="card-body">
+                <h5 class="card-title">Guava</h5>
+                <p class="card-text">They are often referred to as “super fruits” because of their high vitamin content. Guava leaves are sometimes used in hair products because they are believed to prevent hair loss.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 7: Lemon -->
+        <div class="card">
+            <img src="../Assets/Lemon.jpg" class="card-img-top" alt="Lemon">
+            <div class="card-body">
+                <h5 class="card-title">Lemon</h5>
+                <p class="card-text">The lemon is a species of small evergreen trees in the flowering plant family Rutaceae, native to Asia, primarily Northeast India, Northern Myanmar, or China.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 8: King Coconut -->
+        <div class="card">
+            <img src="../Assets/King Coconut.jpg" class="card-img-top" alt="King Coconut">
+            <div class="card-body">
+                <h5 class="card-title">King Coconut</h5>
+                <p class="card-text">King coconuts are native to Sri Lanka. They are also found in India and Indonesia. King coconuts are larger and have a thicker shell than regular coconuts. They have a more oval shape and a bright orange color.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
+
+        <!-- Card 9: Tamarind -->
+        <div class="card">
+            <img src="../Assets/Tamarind.jpg" class="card-img-top" alt="Tamarind">
+            <div class="card-body">
+                <h5 class="card-title">Tamarind</h5>
+                <p class="card-text">Tamarind is a good source of vitamins A, C, and K. It is also a good source of fiber, calcium, and iron. Tamarind has been shown to help lower blood sugar levels and improve digestion.</p>
+                <a href="../purchasing-page/index.html" class="btn btn-danger">Buy Now!</a>
+            </div>
+        </div>
     </div>
-  </section>
-  <!-- Section: Design Block -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" defer></script>
+</body>
+
+</html>
