--- a/client/About Us/index.html
+++ b/client/About Us/index.html
@@ -44,7 +44,33 @@
     </nav>
 
     <!--Main content-->
-      
+      <h2 class="h2 font-weight-bold m-3 ms-5 mt-4 text-right widgets-header text-center text-black fw-bold">About Us!</h2>
+
+      <div class="container mb-5">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 px-0">
+            <img
+              src="../Assets/Guava.jpg"
+              alt=""
+              class="img-thumbnail border-0 w-100 px-0"
+            />
+          </div>
+          <div class="col-lg-4 col-md-6 px-0">
+            <img
+              src="../Assets/Wood Apple.jpg"
+              alt=""
+              class="img-thumbnail border-0 w-100 px-0"
+            />
+          </div>
+          <div class="col-lg-4 col-md-6 px-0">
+            <img
+              src="../Assets/Banana.jpg"
+              alt=""
+              class="img-thumbnail border-0 w-100 px-0"
+            />
+          </div>
+        </div>
+      </div>
 
 </body>
 </html>
